# machine-thinking

./: README.md  pyproject.toml
src/machine_thinking/: chat.py  completion.py  messages.py  responses.py  utils.py
