[build-system]
requires = ["setuptools>=67.0"]
build-backend = "setuptools.build_meta"
[project]
name = "machine-thinking"
version = "0.0.1"
authors = [
    {name="Machina Ratiocinatrix", email="machina.ratio@gmail.com"},
    {name="Alexander Fedotov", email="alex.fedotov@aol.com"}
]
description = "Package description"
readme = "README.md"
requires-python = ">=3.10"
classifiers=[
        "Programming Language :: Python :: 3",
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent",
]

keywords = ["machine-thinking"]

dependencies = [
    "pyyaml == 6.0.3"
]

[project.scripts]
machine-thinking = "machine_thinking.cli:run"

[project.urls]
"Homepage" = "https://github.com/machina-ratiocinatrix/machine-thinking"
"Bug Tracker" = "https://github.com/machina-ratiocinatrix/machine-thinking/issues"