[build-system]
requires = ["setuptools>=67.0"]
build-backend = "setuptools.build_meta"
[project]
name = "machine-thinking"
version = "0.0.5"
authors = [
    {name="Machina Ratiocinatrix", email="machina.ratio@gmail.com"},
    {name="Alexander Fedotov", email="alex.fedotov@aol.com"}
]
description = "Calling the API of 'Thinking-Machines Lab' models without dependencies."
readme = "README.md"
requires-python = ">=3.10"
classifiers=[
        "Programming Language :: Python :: 3",
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent",
]

keywords = ["machine-thinking"]

[project.urls]
"Homepage" = "https://github.com/machina-ratiocinatrix/machine-thinking"
"Bug Tracker" = "https://github.com/machina-ratiocinatrix/machine-thinking/issues"